--- a/report.ipynb
+++ b/report.ipynb
@@ -840,7 +840,7 @@
    "metadata": {},
    "source": [
     "### 7. Conclusion\n",
-    "This analysis successfully distinguished between M&M and Non-Stop chocolates using geometric shape features extracted through image processing and morphological operations.\n",
+    "This analysis successfully distinguished between M&M and Non-Stop chocolates using image processing and morphological operations.\n",
     "\n",
     "**Key Results**:\n",
     "- **Accuracy**: High classification accuracy based on visual inspection\n",
@@ -865,13 +865,12 @@
     "     - May help distinguish between smooth circular Non-Stops and slightly irregular M&M edges\n",
     "   \n",
     "   - **Canny Edge Detection**: Use Canny algorithm for more refined boundary detection\n",
-    "     - Multi-stage algorithm (Gaussian smoothing → gradient calculation → non-maximum suppression → hysteresis thresholding)\n",
     "     - Produces thin, connected edges which could improve perimeter measurements\n",
     "     - Could use edge continuity as a feature: chipped chocolates would have broken edge contours\n",
     "3. **Improved Watershed Segmentation**:\n",
     "   - Use gradient-based watershed instead of distance transform\n",
     "   - Apply Sobel filter to find object boundaries, then use these gradients for watershed\n",
-    "   - Could provide better separation for chocolates with weak boundaries in distance transform\n",
+    "   - Could provide better separation for chocolates with weak boundaries\n",
     "   - Edge-based markers might improve segmentation of irregularly shaped chocolates\n",
     "\n"
    ]
